--- a/sass/style.scss
+++ b/sass/style.scss
@@ -315,6 +315,17 @@ h1{
 }
 
 
+select{
+    width: 100%;
+    height: 40px;
+    padding: 8px;
+    box-sizing: border-box;
+    background-color: #FFF;
+    border: 1px solid #CCCCCC;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
 /* *********** */
 
 header{
@@ -2181,9 +2192,25 @@ button[type=submit]{
 
 .s_preguntas_f{
     background-color: #F4F4F4;
+    padding: 0 0 80px;
+    box-sizing: border-box;
+    position: relative;
+    &::before{
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 500px;
+        height: 600px;
+        background: url('../images/diseno/07-preguntas-frecuentres/bg_section.png') no-repeat center;
+        background-size: contain;
+        mix-blend-mode: luminosity;
+    }
 }
 .c_preguntas_f{
     padding: 20px 0 0;
+    position: relative;
+    z-index: 1;
 }
 
 .grand_container_preguntas{
@@ -2191,8 +2218,11 @@ button[type=submit]{
     grid-template-columns: minmax(265px, 300px) 1fr;
     padding: 20px 0 0;
     box-sizing: border-box;
+    gap: 20px;
     aside{
-
+        h4{
+            margin: 0 0 10px;
+        }
     }
     .container_preguntas_f{
         display: grid;
@@ -2210,7 +2240,7 @@ button[type=submit]{
     grid-template-columns: 1fr 30px;
     align-items: flex-start;
     justify-content: space-between;
-    padding: 14px;
+    padding: 14px 24px;
     gap: 20px;
     box-sizing: border-box;
     cursor: pointer;
@@ -2230,6 +2260,7 @@ button[type=submit]{
         transform: rotate(45deg);
         transition: 300ms ease;
         font-size: 12px;
+        align-self: center;
     }
     &.active{ 
         color: var(--txt_cta_lightblue);
@@ -2243,6 +2274,52 @@ button[type=submit]{
 
 .item_respuesta_f{
     display: none;
+    padding: 0 30px 20px;
+    box-sizing: border-box;
+    .txt{
+        margin-bottom: 20px;
+    }
+    .vid{
+        width: 100%;
+    }
+    .btn{
+        display: inline-block;
+    }
+    .js-modal-btn{
+        width: 100%;
+        display: inline-block;
+        cursor: pointer;
+        max-height: 329px;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        position: relative;
+        &::before{
+            content: "\f04b";
+            font-family: "Font Awesome 5 Pro";
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            border-radius: 100px;
+            background-color: var(--color_pri);
+            inset: 0;
+            margin: auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: var(--txt_cta_light);
+            font-weight: 700;
+            user-select: none;
+            padding-left: 4px;
+            box-sizing: border-box;
+        }
+        img{
+            width: 100%;
+            height: 100%;
+            object-position: center;
+            object-fit: cover;
+        }
+    }
 }
 
 
@@ -2654,6 +2731,12 @@ RESPONSIVE DESIGN
     }
     .c_sliderVideos{
         padding: 0 20px;
+    }
+    .grand_container_preguntas{
+        grid-template-columns: 1fr;
+    }
+    .s_preguntas_f::before{
+        display: none;
     }
 }
 @media screen and (max-width:480px){
