interna derechos y deberes ok con responsive

--- a/css/style.css
+++ b/css/style.css
@@ -2362,6 +2362,97 @@ button[type=submit] {
      object-fit: cover;
 }
 
+/* ESTILOS INTERNA DERECHOS Y DEBERES */
+.s_derechos_deberes {
+  background-color: #E5E5E5;
+  padding: 0 0 60px;
+}
+
+.grand_container_derechos {
+  margin: 60px 0 0;
+}
+
+.nav_derechos {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.nav_derechos ul {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  gap: 4px;
+  width: 100%;
+}
+
+.btn_derecho {
+  background-color: #EBEBEB;
+  color: #94999B;
+  padding: 10px 20px;
+  box-sizing: border-box;
+  width: 100vw;
+  max-width: 390px;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 4px 4px 0 0;
+  display: inline-block;
+  font-weight: 700;
+  font-size: 20px;
+}
+.btn_derecho.active {
+  color: var(--txt_cta_lightblue);
+  background-color: var(--bg_cta_light);
+}
+
+.c_items_derechos {
+  display: none;
+  grid-template-columns: 1fr 1fr;
+  gap: 30px;
+  justify-self: center;
+  background-color: var(--bg_general);
+  padding: 80px 100px;
+  box-sizing: border-box;
+  border-radius: 8px;
+}
+.c_items_derechos.active {
+  display: grid !important;
+}
+
+.item_derecho {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+.item_derecho picture {
+  display: inline-block;
+  border-radius: 100px;
+  background-color: var(--color_pri);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 70px;
+}
+.item_derecho picture img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  min-height: 60px;
+  min-width: 60px;
+}
+.item_derecho .desd_item_d {
+  text-align: left;
+}
+.item_derecho .desd_item_d h4 {
+  margin: 0 0 10px;
+  text-transform: uppercase;
+  color: var(--txt_cta_lightblue);
+}
+
 /* ************
 RESPONSIVE DESIGN
 ************ */
@@ -2545,6 +2636,20 @@ RESPONSIVE DESIGN
 
   .c_perfil_pro aside {
     top: 85px;
+  }
+
+  .c_items_derechos {
+    padding: 60px 40px;
+  }
+
+  .btn_derecho {
+    width: 100%;
+    font-size: 16px;
+  }
+
+  .nav_derechos {
+    padding: 0 20px;
+    box-sizing: border-box;
   }
 }
 @media screen and (max-width: 768px) {
@@ -2861,6 +2966,20 @@ RESPONSIVE DESIGN
   .s_preguntas_f::before {
     display: none;
   }
+
+  .item_derecho {
+    flex-direction: column;
+  }
+
+  .item_derecho .desd_item_d {
+    text-align: center;
+  }
+
+  .c_items_derechos {
+    padding: 30px 30px;
+    gap: 20px;
+    align-items: flex-start;
+  }
 }
 @media screen and (max-width: 480px) {
   header .header_nav {
@@ -2998,6 +3117,33 @@ RESPONSIVE DESIGN
   }
   .btn.social1 span {
     font-size: 13px;
+  }
+
+  .c_items_derechos {
+    grid-template-columns: 1fr;
+    padding: 30px 20px;
+  }
+
+  .item_derecho {
+    flex-direction: row;
+    gap: 20px;
+  }
+
+  .btn_derecho {
+    padding: 10px;
+    font-size: 14px;
+  }
+
+  .item_derecho .desd_item_d {
+    text-align: left;
+  }
+
+  .txt_d {
+    font-size: 13px;
+  }
+
+  .item_derecho picture {
+    align-self: flex-start;
   }
 }
 @media screen and (max-width: 390px) {
