--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2288,7 +2288,7 @@ button[type=submit]{
     
 }
 
-.cont_cta{
+.cont_cta2{
     padding: 20px 0 40px;
     box-sizing: border-box;
     text-align: center;
