--- a/css/style.css
+++ b/css/style.css
@@ -238,6 +238,10 @@ h1 {
   background-color: var(--bg_cta_lightblue);
   color: var(--txt_cta_light);
 }
+.btn.light {
+  background-color: var(--bg_cta_light);
+  color: var(--txt_cta_lightblue);
+}
 .btn:hover::before {
   width: 160px;
   opacity: 1;
@@ -2881,6 +2885,163 @@ button[type=submit] {
   margin: 0;
 }
 
+/* ESTILOS INTERNA SERVICIOS */
+.cont_cards_servicios {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: center;
+}
+.cont_cards_servicios .card_servicios {
+  min-width: 260px;
+  /*  max-width: 330px; */
+  width: 30%;
+  position: relative;
+  overflow: hidden;
+  min-height: 313px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  border-radius: 6px;
+  padding: 20px;
+  box-sizing: border-box;
+}
+.cont_cards_servicios .card_servicios picture {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  inset: 0;
+  margin: auto;
+}
+.cont_cards_servicios .card_servicios picture::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 73.87%);
+}
+.cont_cards_servicios .card_servicios picture img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.cont_cards_servicios .card_servicios .cont_btn_c_serv {
+  transition: 300ms ease-out;
+  margin: 0 0 -40px;
+  opacity: 0;
+}
+.cont_cards_servicios .card_servicios h4 {
+  position: relative;
+  z-index: 1;
+  margin: 0 0 30px;
+  color: var(--txt_cta_light);
+  font-size: 20px;
+  text-align: center;
+  transition: 300ms ease-out;
+}
+.cont_cards_servicios .card_servicios:hover .cont_btn_c_serv {
+  opacity: 1;
+  margin-bottom: 30px;
+}
+.cont_cards_servicios .card_servicios:hover h4 {
+  margin: 0 0 20px;
+}
+
+.c_int_servicios {
+  padding: 0 0 60px;
+  box-sizing: border-box;
+}
+.c_int_servicios h1 {
+  margin: 40px 0;
+}
+
+.s_pasos_azul {
+  background-color: var(--color_pri);
+  padding: 60px 0;
+  box-sizing: border-box;
+}
+
+.c_pasos_azul .tit_section.c_white {
+  margin: 0 0 30px;
+}
+
+.c_pasos_cirugia {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  gap: 20px;
+  align-items: stretch;
+  margin: 20px 0 30px;
+}
+.c_pasos_cirugia .card_i_cirugia {
+  background-color: var(--bg_general);
+  border-radius: 6px;
+  padding: 20px 50px 20px 20px;
+  box-sizing: border-box;
+  overflow: hidden;
+  height: 100%;
+}
+.c_pasos_cirugia .card_i_cirugia .tit_pc {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.c_pasos_cirugia .card_i_cirugia .tit_pc span {
+  font-size: 40px;
+  font-weight: 700;
+  color: var(--txt_cta_lightblue);
+}
+.c_pasos_cirugia .card_i_cirugia .tit_pc h4 {
+  margin: 0;
+}
+.c_pasos_cirugia .card_i_cirugia .desc_pc {
+  display: grid;
+  grid-template-columns: 1;
+  align-items: fle;
+  padding: 20px 0 0;
+  box-sizing: border-box;
+  position: relative;
+}
+.c_pasos_cirugia .card_i_cirugia .desc_pc picture {
+  position: absolute;
+  right: -70px;
+  margin: auto;
+  top: 0;
+  background: var(--color_pri);
+  padding: 10px;
+  box-sizing: border-box;
+  border-radius: 100px;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.c_pasos_cirugia .card_i_cirugia .desc_pc picture img {
+  width: 80%;
+  height: 80%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.c_pasos_cirugia .card_i_cirugia .desc_pc h5 {
+  margin: 0;
+  font-size: 14px;
+  font-weight: 700;
+  color: var(--txt_cta_lightblue);
+}
+.c_pasos_cirugia .card_i_cirugia .desc_pc ul {
+  margin: 10px 0;
+  padding: 0 0 0 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.c_pasos_cirugia .card_i_cirugia .desc_pc ul li {
+  font-size: 14px;
+}
+
 /* ************
 RESPONSIVE DESIGN
 ************ */
@@ -3458,6 +3619,10 @@ RESPONSIVE DESIGN
     gap: 0;
     padding: 20px 20px 0;
   }
+
+  .cont_cards_servicios .card_servicios {
+    width: 47%;
+  }
 }
 @media screen and (max-width: 480px) {
   header .header_nav {
@@ -3662,6 +3827,18 @@ RESPONSIVE DESIGN
     right: 24px;
     color: var(--color_pri);
     pointer-events: none;
+  }
+
+  .cont_cards_servicios .card_servicios {
+    width: 47%;
+  }
+
+  .cont_cards_servicios .card_servicios {
+    width: 100%;
+  }
+
+  .cont_cards_servicios .card_servicios {
+    min-height: 200px;
   }
 }
 @media screen and (max-width: 390px) {
