--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,17 @@ h1 {
   color: var(--txt_cta_lightblue);
   padding: 10px;
 }
+.btn.outlinelight {
+  border: 1px solid var(--bg_cta_light);
+  color: var(--txt_cta_light);
+  border-radius: 100px;
+  background-color: transparent;
+}
+.btn.outlineblue {
+  border: 1px solid var(--txt_cta_lightblue);
+  background-color: transparent;
+  color: var(--txt_cta_lightblue);
+}
 .btn::before {
   content: "";
   position: absolute;
