Inicio estilos interna tratamientos

--- a/css/style.css
+++ b/css/style.css
@@ -3053,6 +3053,7 @@ button[type=submit] {
   font-size: 14px;
 }
 
+/* ESTILOS INTERNA TRATAMIENTOS */
 /* ************
 RESPONSIVE DESIGN
 ************ */
