--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,7 @@ h1 {
   font-size: 18px;
   position: relative;
   overflow: hidden;
+  box-sizing: border-box;
 }
 .btn.social1 {
   border-radius: 100px;
@@ -206,7 +207,7 @@ h1 {
   font-size: 16px;
   font-weight: 700;
   padding: 4px 12px;
-  max-width: 70px;
+  max-width: 90px;
 }
 .btn.link {
   background-color: transparent;
@@ -224,11 +225,21 @@ h1 {
   color: var(--txt_cta_light);
   border-radius: 100px;
   background-color: transparent;
+  transition: 300ms ease-out;
+}
+.btn.outlinelight:hover {
+  background-color: var(--bg_cta_light);
+  color: var(--txt_cta_lightblue);
 }
 .btn.outlineblue {
   border: 1px solid var(--txt_cta_lightblue);
   background-color: transparent;
   color: var(--txt_cta_lightblue);
+  transition: 300ms ease-out;
+}
+.btn.outlineblue:hover {
+  background-color: var(--bg_cta_lightblue);
+  color: var(--txt_cta_light);
 }
 .btn::before {
   content: "";
@@ -1447,6 +1458,15 @@ footer .subfooter {
   padding: 20px;
   box-sizing: border-box;
 }
+.head_desc_int .btn {
+  display: flex;
+  align-items: center;
+  padding-left: 0;
+}
+.head_desc_int .btn span {
+  font-size: 20px;
+  margin: 0 10px 0 0;
+}
 
 .s_items_slider {
   padding: 60px 0;
@@ -2439,6 +2459,40 @@ button[type=submit] {
   transform: rotate(0deg);
 }
 
+.js-modal-btn {
+  border-radius: 4px;
+  overflow: hidden;
+  position: relative;
+}
+.js-modal-btn img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.js-modal-btn::before {
+  content: "\f04b";
+  font-family: "Font Awesome 5 Pro";
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  border-radius: 100px;
+  background-color: var(--color_pri);
+  inset: 0;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--txt_cta_light);
+  font-weight: 700;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  padding-left: 4px;
+  box-sizing: border-box;
+}
+
 .item_respuesta_f {
   display: none;
   padding: 0 30px 20px;
@@ -3054,6 +3108,222 @@ button[type=submit] {
 }
 
 /* ESTILOS INTERNA TRATAMIENTOS */
+.color1 {
+  background-color: #F4FAFC;
+}
+.color1 .head_desc_int {
+  background-color: #F4FAFC;
+  padding-left: 0;
+}
+
+.c_tit_nav_procedimientos {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 40px 0;
+  box-sizing: border-box;
+}
+
+.nav_procedimientos {
+  margin: 30px 0 0;
+}
+.nav_procedimientos ul {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  gap: 20px;
+}
+.nav_procedimientos ul a {
+  padding: 8px 40px;
+}
+
+.item_info_procedimientos {
+  display: grid;
+  grid-template-columns: 1.5fr 2fr;
+  gap: 30px;
+  align-items: stretch;
+  margin: 40px 0;
+}
+.item_info_procedimientos .video_testimonio.js-modal-btn {
+  border-radius: 4px;
+  overflow: hidden;
+  display: inline-block;
+  max-height: 300px;
+}
+.item_info_procedimientos .subtit_proce {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  align-self: flex-start;
+}
+.item_info_procedimientos .subtit_proce h4 {
+  color: var(--txt_cta_lightblue);
+  font-size: 24px;
+  margin: 0;
+}
+.item_info_procedimientos .item_pregunta_f {
+  border: 1px solid #E7E7E7;
+  margin: 0 0 10px;
+  border-radius: 4px;
+}
+.item_info_procedimientos .contenido_proced .item_pregunta_f {
+  background-color: var(--bg_cta_light);
+}
+.item_info_procedimientos .contenido_proced p {
+  margin: 0;
+  line-height: 1.3;
+}
+.item_info_procedimientos .contenido_proced .itms_bene_proced {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  justify-content: center;
+  padding: 30px 0;
+  box-sizing: border-box;
+}
+.item_info_procedimientos .contenido_proced .itms_bene_proced .itp_proce {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+.item_info_procedimientos .contenido_proced .itms_bene_proced picture {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--color_pri);
+  border-radius: 100px;
+  width: 60px;
+  height: 60px;
+}
+.item_info_procedimientos .contenido_proced .itms_bene_proced span {
+  display: inline-block;
+  text-align: center;
+  font-size: 15px;
+}
+
+.s_it_trata {
+  background-color: var(--color_pri);
+  padding: 30px 0;
+  box-sizing: border-box;
+  min-height: 220px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.s_it_trata::before {
+  content: "";
+  position: absolute;
+  background: linear-gradient(90deg, #009EE2 0%, rgba(0, 158, 226, 0) 14.58%, rgba(0, 158, 226, 0.0210826) 84.9%, rgba(0, 158, 226, 0.948718) 100%), url("../images/diseno/13-interna-tratamiento/bg_azul1.jpg") no-repeat center;
+  background-size: cover;
+  mix-blend-mode: luminosity;
+  width: 100%;
+  height: 100%;
+  opacity: 0.2;
+}
+
+.c_it_trata {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  position: relative;
+  z-index: 1;
+}
+.c_it_trata .tit_trata {
+  display: flex;
+  align-items: flex-start;
+  gap: 20px;
+}
+.c_it_trata .tit_trata h4 {
+  font-size: 24px;
+  text-align: left;
+  color: var(--txt_cta_light);
+  margin: 0;
+}
+.c_it_trata .ctas_trata {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.c_it_trata .ctas_trata a {
+  font-size: 16px;
+  text-transform: uppercase;
+}
+.c_it_trata .ctas_trata a span {
+  margin: 0 0 0 10px;
+}
+
+.s_it_ofertaespecial {
+  margin: 100px 0;
+}
+
+.c_it_ofertaespecial {
+  background: #009EE2;
+  border-radius: 0px 0px 4px 4px;
+  position: relative;
+  padding: 30px 100px;
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 50px;
+  min-height: 280px;
+}
+.c_it_ofertaespecial::before {
+  content: "";
+  position: absolute;
+  background: linear-gradient(90deg, #009EE2 1.04%, rgba(0, 158, 226, 0) 49.48%, #009EE2 100%), url("../images/diseno/13-interna-tratamiento/bg_azul2.jpg") no-repeat left;
+  background-size: 60%;
+  mix-blend-mode: luminosity;
+  opacity: 0.2;
+  width: 100%;
+  height: 100%;
+  inset: 0;
+  margin: 0;
+}
+.c_it_ofertaespecial picture {
+  z-index: 1;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 20px;
+}
+.c_it_ofertaespecial picture h3 {
+  color: var(--txt_cta_light);
+  font-size: 24px;
+}
+.c_it_ofertaespecial picture img {
+  width: 80px;
+  height: 80px;
+  border-radius: 100px;
+  box-sizing: border-box;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.c_it_ofertaespecial .c_desc_ofertaespecial {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+}
+.c_it_ofertaespecial .c_desc_ofertaespecial p {
+  color: var(--txt_cta_light);
+  max-width: 400px;
+  line-height: 1.4;
+  margin: 0;
+}
+.c_it_ofertaespecial .c_desc_ofertaespecial p span {
+  font-weight: 700;
+}
+
 /* ************
 RESPONSIVE DESIGN
 ************ */
@@ -3261,8 +3531,20 @@ RESPONSIVE DESIGN
   .pest_top {
     font-size: 14px;
   }
+
+  .c_it_trata {
+    flex-direction: column;
+  }
+
+  .nav_procedimientos ul a {
+    padding: 8px 20px;
+  }
+
+  .c_it_ofertaespecial {
+    padding: 30px 40px;
+  }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1050px) and (max-width: 768px) {
   .tit_section {
     font-size: 1.6em;
   }
@@ -3634,6 +3916,64 @@ RESPONSIVE DESIGN
 
   .cont_cards_servicios .card_servicios {
     width: 47%;
+  }
+
+  .item_info_procedimientos {
+    grid-template-columns: 1fr;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .item_info_procedimientos .video_testimonio.js-modal-btn {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .c_it_trata .ctas_trata {
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .nav_procedimientos ul {
+    flex-direction: column;
+    gap: 10px;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .nav_procedimientos ul a {
+    display: inline-block;
+    min-width: 200px;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .c_it_ofertaespecial {
+    grid-template-columns: 1fr;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .c_it_ofertaespecial .c_desc_ofertaespecial p {
+    max-width: initial;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .c_it_ofertaespecial {
+    gap: 0;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .c_it_ofertaespecial {
+    padding: 20px;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .c_it_ofertaespecial .btn {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .item_info_procedimientos .contenido_proced .itms_bene_proced {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
 }
 @media screen and (max-width: 480px) {
