--- a/sass/style.scss
+++ b/sass/style.scss
@@ -163,6 +163,7 @@ h1{
     font-size: 18px;
     position: relative;
     overflow: hidden;
+    box-sizing: border-box;
     &.social1{
         border-radius: 100px;
         display: flex;
@@ -185,7 +186,7 @@ h1{
         font-size: 16px;
         font-weight: 700;
         padding: 4px 12px;
-        max-width: 70px;
+        max-width: 90px;
     }
     &.link{
         background-color: transparent;
@@ -203,11 +204,21 @@ h1{
         color: var(--txt_cta_light);
         border-radius: 100px;
         background-color: transparent;
+        transition: 300ms ease-out;
+        &:hover{
+            background-color: var(--bg_cta_light);
+            color: var(--txt_cta_lightblue);
+        }
     }
     &.outlineblue{
         border: 1px solid var(--txt_cta_lightblue);
         background-color: transparent;
         color: var(--txt_cta_lightblue);
+        transition: 300ms ease-out;
+        &:hover{
+            background-color: var(--bg_cta_lightblue);
+            color: var(--txt_cta_light);
+        }
     }
     &::before{
         content: '';
@@ -1414,6 +1425,15 @@ footer{
     border-radius: 12px;
     padding: 20px;
     box-sizing: border-box;
+    .btn{
+        display: flex;
+        align-items: center;
+        padding-left: 0;
+        span{
+            font-size: 20px;
+            margin: 0 10px 0 0;
+        }
+    }
 }
 .s_items_slider{
     padding: 60px 0;
@@ -2404,8 +2424,38 @@ button[type=submit]{
         }
     }
 }
-
-
+.js-modal-btn{
+    border-radius: 4px;
+    overflow: hidden;
+    position: relative;
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    &::before{
+        content: "\f04b";
+        font-family: "Font Awesome 5 Pro";
+        position: absolute;
+        width: 50px;
+        height: 50px;
+        border-radius: 100px;
+        background-color: var(--color_pri);
+        inset: 0;
+        margin: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: var(--txt_cta_light);
+        font-weight: 700;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        padding-left: 4px;
+        box-sizing: border-box;
+    }
+}
 .item_respuesta_f{
     display: none;
     padding: 0 30px 20px;
@@ -2991,15 +3041,221 @@ button[type=submit]{
 
 /* ESTILOS INTERNA TRATAMIENTOS */
 
+.color1{
+    background-color: #F4FAFC;
+    .head_desc_int{
+        background-color: #F4FAFC;
+        padding-left: 0;
+    }
+}
+
+.c_tit_nav_procedimientos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 40px 0;
+    box-sizing: border-box;
+}
+.nav_procedimientos{
+    margin: 30px 0 0;
+    ul{
+        padding: 0;
+        margin: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        list-style: none;
+        gap: 20px;
+        a{
+            padding: 8px 40px;
+        }
+    }
+}
+
+.item_info_procedimientos{
+    display: grid;
+    grid-template-columns: 1.5fr 2fr;
+    gap: 30px;
+    align-items: stretch;
+    margin: 40px 0;
+    .video_testimonio.js-modal-btn{
+        border-radius: 4px;
+        overflow: hidden;
+        display: inline-block;
+        max-height: 300px;
+    }
+    .subtit_proce{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        align-self: flex-start;
+        h4{
+            color: var(--txt_cta_lightblue);
+            font-size: 24px;
+            margin: 0;
+        }
+    }
+    .item_pregunta_f{
+        border: 1px solid #E7E7E7;
+        margin: 0 0 10px;
+        border-radius: 4px;
+    }
+    .contenido_proced{
+        .item_pregunta_f{
+            background-color: var(--bg_cta_light);
+        }
+        p{
+            margin: 0;
+            line-height: 1.3;
+        }
+        .itms_bene_proced{
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            justify-content: center;
+            padding: 30px 0;
+            box-sizing: border-box;
+            .itp_proce{
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                align-items: center;
+            }
+            picture{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border: 1px solid var(--color_pri);
+                border-radius: 100px;
+                width: 60px;
+                height: 60px;
+            }
+            span{
+                display: inline-block;
+                text-align: center;
+                font-size: 15px;
+            }
+        }
+    }
+}
 
 
+.s_it_trata{
+    background-color: var(--color_pri);
+    padding: 30px 0;
+    box-sizing: border-box;
+    min-height: 220px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    &::before{
+        content: '';
+        position: absolute;
+        background: linear-gradient(90deg, #009EE2 0%, rgba(0, 158, 226, 0) 14.58%, rgba(0, 158, 226, 0.0210826) 84.9%, rgba(0, 158, 226, 0.948718) 100%), url('../images/diseno/13-interna-tratamiento/bg_azul1.jpg') no-repeat center;
+        background-size: cover;
+        mix-blend-mode: luminosity;
+        width: 100%;
+        height: 100%;
+        opacity: .2;
+    }
+}
+.c_it_trata{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    position: relative;
+    z-index: 1;
+    .tit_trata{
+        display: flex;
+        align-items: flex-start;
+        gap: 20px;
+        h4{
+            font-size: 24px;
+            text-align: left;
+            color: var(--txt_cta_light);
+            margin: 0;
+        }
+    }
+    .ctas_trata{
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        a{
+            font-size: 16px;
+            text-transform: uppercase;
+            span{
+                margin: 0 0 0 10px;
+            }
+        }
+    }
+}
 
+.s_it_ofertaespecial{
+    margin: 100px 0;
+}
 
-
-
-
-
-
+.c_it_ofertaespecial{
+    background: #009EE2;
+    border-radius: 0px 0px 4px 4px;
+    position: relative;
+    padding: 30px 100px;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    gap: 50px;
+    min-height: 280px;
+    &::before{
+        content: '';
+        position: absolute;
+        background: linear-gradient(90deg, #009EE2 1.04%, rgba(0, 158, 226, 0) 49.48%, #009EE2 100%), url('../images/diseno/13-interna-tratamiento/bg_azul2.jpg') no-repeat left;
+        background-size: 60%;
+        mix-blend-mode: luminosity;
+        opacity: 0.2;
+        width: 100%;
+        height: 100%;
+        inset: 0;
+        margin: 0;
+    }
+    picture{
+        z-index: 1;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 20px;
+        h3{
+            color: var(--txt_cta_light);
+            font-size: 24px;
+        }
+        img{
+            width: 80px;
+            height: 80px;
+            border-radius: 100px;
+            box-sizing: border-box;
+            object-fit: contain;
+        }
+    }
+    .c_desc_ofertaespecial{
+        position: relative;
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 20px;
+        p{
+            color: var(--txt_cta_light);
+            max-width: 400px;
+            line-height: 1.4;
+            margin: 0;
+            span{
+                font-weight: 700;
+            }
+        }
+    }
+}
 
 
 
@@ -3180,6 +3436,14 @@ RESPONSIVE DESIGN
     .pest_top{
         font-size: 14px;
     }
+    .c_it_trata{
+        flex-direction: column;
+    }
+    .nav_procedimientos ul a {
+        padding: 8px 20px;
+    }
+    .c_it_ofertaespecial{
+        padding: 30px 40px;
 }
 @media screen and (max-width:768px){
     .tit_section{
@@ -3486,6 +3750,44 @@ RESPONSIVE DESIGN
     }
     .cont_cards_servicios .card_servicios{
         width: 47%;
+    }
+    .item_info_procedimientos{
+        grid-template-columns: 1fr;
+    }
+    
+    }.item_info_procedimientos .video_testimonio.js-modal-btn{
+        width: 100%;
+    }
+    .c_it_trata .ctas_trata{
+        flex-direction: column;
+    }
+    .nav_procedimientos ul{
+        flex-direction: column;
+        gap: 10px;
+    }
+    .nav_procedimientos ul a{
+        display: inline-block;
+        min-width: 200px;
+        text-align: center;
+    }
+    .c_it_ofertaespecial{
+        grid-template-columns: 1fr;
+    }
+    .c_it_ofertaespecial .c_desc_ofertaespecial p{
+        max-width: initial;
+    }
+    .c_it_ofertaespecial{
+        gap: 0;
+    }
+    .c_it_ofertaespecial {
+        padding: 20px;
+    }
+    .c_it_ofertaespecial .btn{
+        width: 100%;
+    }
+    .item_info_procedimientos .contenido_proced .itms_bene_proced{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
     }
 }
 @media screen and (max-width:480px){
