inicio interna cirugia

--- a/css/style.css
+++ b/css/style.css
@@ -684,6 +684,7 @@ footer h1 {
   color: var(--txt_cuerpo_light);
   opacity: 0.4;
   margin: 0 0 20px;
+  text-transform: initial;
 }
 footer .direccion_bl {
   color: var(--txt_cuerpo_light);
