--- a/sass/style.scss
+++ b/sass/style.scss
@@ -668,6 +668,7 @@ footer{
         color: var(--txt_cuerpo_light);
         opacity: 0.4;
         margin: 0 0 20px;
+        text-transform: initial;
     }
     .direccion_bl{
         color: var(--txt_cuerpo_light);
