--- a/css/style.css
+++ b/css/style.css
@@ -3325,6 +3325,82 @@ button[type=submit] {
   font-weight: 700;
 }
 
+.int_cirugia picture img {
+  filter: grayscale(1);
+}
+.int_cirugia .c_headet_int {
+  grid-template-columns: 1fr;
+}
+.int_cirugia .btn.leermas {
+  padding-left: 0;
+}
+
+.c_desc_cirugia {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  padding: 10px 80px;
+  margin: 0 0 100px;
+  box-sizing: border-box;
+  border-top: 1px solid var(--color_pri);
+  border-bottom: 1px solid var(--color_pri);
+}
+.c_desc_cirugia .cdc_item {
+  display: flex;
+  justify-content: flex-start;
+  gap: 4px;
+  color: var(--txt_cta_lightblue);
+}
+.c_desc_cirugia .cdc_item span {
+  font-weight: 700;
+}
+
+.subcont {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.subcont h1 {
+  margin: 0;
+}
+
+.items_recomend {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  align-items: center;
+  gap: 20px;
+}
+.items_recomend .iip_item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.items_recomend .iip_item span {
+  font-weight: 700;
+}
+
+.images_ciru {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  justify-content: center;
+  margin: 0 0 30px;
+  flex-wrap: wrap;
+}
+.images_ciru img {
+  border-radius: 4px;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  display: block;
+  max-width: 170px;
+}
+
+.s_cta_reserva_cita {
+  margin: 60px 0 100px;
+}
+
 /* ************
 RESPONSIVE DESIGN
 ************ */
@@ -3977,6 +4053,23 @@ RESPONSIVE DESIGN
     grid-template-columns: 1fr 1fr;
   }
 }
+@media screen and (max-width: 1050px) {
+  .subcont {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .c_desc_cirugia {
+    padding: 20px;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .c_desc_cirugia {
+    flex-direction: column;
+    gap: 6px;
+  }
+}
 @media screen and (max-width: 480px) {
   header .header_nav {
     width: 100%;
@@ -4192,6 +4285,15 @@ RESPONSIVE DESIGN
 
   .cont_cards_servicios .card_servicios {
     min-height: 200px;
+  }
+
+  .images_ciru img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .images_ciru img {
+    max-width: 110px;
   }
 }
 @media screen and (max-width: 390px) {
