--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3259,13 +3259,82 @@ button[type=submit]{
 }
 
 
+.int_cirugia{
+    picture img{
+        filter: grayscale(1);
+    }
+    .c_headet_int{
+        grid-template-columns: 1fr;
+    }
+    .btn.leermas{
+        padding-left: 0;
+    }
+}
+
+.c_desc_cirugia{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    padding: 10px 80px;
+    margin: 0 0 100px;
+    box-sizing: border-box;
+    border-top: 1px solid var(--color_pri);
+    border-bottom: 1px solid var(--color_pri);
+    .cdc_item{
+        display: flex;
+        justify-content: flex-start;
+        gap: 4px;
+        color: var(--txt_cta_lightblue);
+        span{
+            font-weight: 700;
+        }
+    }
+}
+.subcont{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    h1{
+        margin: 0;
+    }
+}
+
+.items_recomend{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    align-items: center;
+    gap: 20px;
+    .iip_item{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        span{
+            font-weight: 700;
+        }
+    }
+}
 
 
+.images_ciru{
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    justify-content: center;
+    margin: 0 0 30px;
+    flex-wrap: wrap;
+    img{
+        border-radius: 4px;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
+        max-width: 170px;
+    }
+}
 
-
-
-
-
+.s_cta_reserva_cita{
+    margin: 60px 0 100px;
+}
 
 
 /* ************
@@ -3790,6 +3859,17 @@ RESPONSIVE DESIGN
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
+    .subcont{
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+    .c_desc_cirugia{
+        padding: 20px;
+    }
+    .c_desc_cirugia{
+        flex-direction: column;
+        gap: 6px;
+    }
 }
 @media screen and (max-width:480px){
     header .header_nav{
@@ -3965,6 +4045,13 @@ RESPONSIVE DESIGN
     }
     .cont_cards_servicios .card_servicios{
         min-height: 200px;
+    }
+    .images_ciru img{
+        width: 100%;
+        height: 100%;
+    }
+    .images_ciru img{
+        max-width: 110px;
     }
 }
 @media screen and (max-width:390px){
