--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3049,7 +3049,9 @@ button[type=submit]{
         padding-left: 0;
     }
 }
-
+.color2{
+    background-color: #F4F4F4;
+}
 .c_tit_nav_procedimientos{
     display: flex;
     flex-direction: column;
